# adb

./: CMakeLists.txt  README.md  aarch64_linux_toolchain.cmake
cmake/linux/: toolchain-aarch64.cmake
cmake/toolchain/linux-aarch64/: README.txt
include/: platform_tools_version.h
lib/adbd_auth/: Android.bp  adbd_auth.cpp  libadbd_auth.map.txt
lib/adbd_auth/include/: adbd_auth.h
lib/base/: CMakeLists.txt  properties.cpp
lib/base/include/android-base/: properties.h  unique_fd.h
lib/diagnose_usb/: CMakeLists.txt
lib/libbuildversion/: CMakeLists.txt  libbuildversion.cpp
lib/libcrypto_utils/: CMakeLists.txt
lib/libcutils/: CMakeLists.txt  socket_local_client_unix.c  socket_local_server_unix.c
lib/liblog/: CMakeLists.txt  logd_writer.cpp
lib/windows/: .gitignore
lib/windows/usb/adb_winapi_test/: BUILDME.TXT  SOURCES  adb_winapi_test.cpp  stdafx.h
lib/windows/usb/api/: BUILDME.TXT  SOURCES  adb_api.h
lib/windows/usb/winusb/: AdbWinUsbApi.rc  BUILDME.TXT  SOURCES  adb_winusb_endpoint_object.cpp  adb_winusb_endpoint_object.h
prebuilt/: CMakeLists_boringssl.txt
prebuilt/windows/: CMakeLists_boringssl.txt
src/: CMakeLists.txt  adb.cpp  adb_trace.cpp  adb_unique_fd.h  socket_spec.cpp  sockets.cpp  sysdeps.h  sysdeps_win32.cpp  transport.cpp  transport_local.cpp  types.h
src/client/: adb_install.cpp  commandline.cpp  main.cpp  usb_dispatch.cpp
src/daemon/: auth.cpp  file_sync_service.cpp  main.cpp  services.cpp  shell_service.cpp  usb.cpp
src/sysdeps/: chrono.h  memory.h  uio.h
